[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
exclude = [
  "/docs",
  "/notebooks",
  "/aeolis/tests",
  "/aeolis/examples/1D",
  "/aeolis/examples/grainsizevariations",
]

[project]
name = "aeolis"
version = "3.0.1"
authors = [
  { name="Sierd de Vries", email="sierd.devries@tudelft.nl" },
]
maintainers = [
  {name="Sierd de Vries", email="sierd.devries@tudelft.nl"},
  {name="Bart van Westen"},
]
description = "A process-based model for simulating supply-limited aeolian sediment transport"
readme = "README.md"
requires-python = ">=3.9, <4"
license = {file = "LICENSE.txt"}
keywords = ["aeolian sediment", "transport", "model", "deltares", "tudelft"]
dependencies = [
  "docopt",
  "typer",
  "bmi-python",
  "netCDF4",
  "scipy",
  "numpy",
  "matplotlib",
  "numba",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
  dev = [
    "pytest",
    "pytest-cov",
    "Sphinx<7",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex>=2.5.0",
    "sphinx-copybutton==0.5.2",
    "plot==0.6.5",
    "nbsphinx>=0.9.2",
  ]

[project.scripts]
aeolis = "aeolis.console:start_aeolis_app"
aeolis-wind = "aeolis.console:start_aeolis_wind_app"

[project.urls]
Homepage = "https://github.com/openearth/aeolis-python"
Documentation = "https://aeolis-python.readthedocs.io"
"Bug Tracker" = "https://github.com/openearth/aeolis-python/issues"
